# sommercamp

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
.teachers/: README.md  app.py  app_components.py  app_emoji.py  app_neural.py  app_pagination.py  app_prf.py  app_snippets.py  config.toml  indexer.py
sommercamp/: app.py  crawler.py  indexer.py  searcher.py
