[project]
name = "sommercamp"
authors = [
    { name = "Jan Heinrich Reimer", email = "heinrich.reimer@uni-jena.de" },
]
description = "Baue dir deine eigene Suchmaschine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy~=1.26",
    "pandas~=2.2",
    "pip~=24.1",
    "python-terrier~=0.10.1",
    "resiliparse~=0.14.5",
    "scrapy~=2.11",
    "streamlit~=1.30",
    "streamlit-pagination~=0.0.3",
    "streamlit-searchbox~=0.1.6",
    "watchdog~=4.0",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["data"]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
