[project]
name = "sommercamp"
authors = [
    { name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de" },
]
description = "Baue dir deine eigene Suchmaschine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu~=1.8",
    "numpy~=1.26",
    "pandas~=2.2",
    "pip~=24.1",
    "python-terrier~=0.13.0",
    "pyterrier-dr @ git+https://github.com/terrierteam/pyterrier_dr.git@c8946e93b094e4ebc27ca3ce552fa8714f5c1c11",
    "resiliparse~=0.14.5",
    "scrapy~=2.11",
    "streamlit~=1.30",
    "watchdog~=6.0",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["data"]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
